--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="mail" href="mailto:info@example.com">
                             <svg class="top-contact-icon mail-icon"
                                         width="20"
-                                        heigh="20">
+                                        height="20">
                                             <use href="./img/symbol-defs.svg#icon-envelope">
                                             </use>
                                         </svg>
@@ -47,7 +47,7 @@
                         <a class="phone"  href="tel:+380991111111">
                             <svg class="top-contact-icon phone-icon"
                                         width="20"
-                                        heigh="20">
+                                        height="20">
                                             <use href="./img/symbol-defs.svg#icon-smartphone">
                                             </use>
                                         </svg>
@@ -503,6 +503,6 @@
         </button>
         </div> 
      </div>
-<script src="./css/js/modal.js"></script>
+<script src="./js/modal.js"></script>
 </body>
 </html>
