--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                     <a class="mail" href="mailto:info@example.com">
                         <svg class="top-contact-icon mail-icon"
                                     width="20"
-                                    heigh="20">
+                                    height="20">
                                         <use href="./img/symbol-defs.svg#icon-envelope">
                                         </use>
                                     </svg>
@@ -46,7 +46,7 @@
                     <a class="phone"  href="tel:+380991111111">
                         <svg class="top-contact-icon phone-icon"
                                     width="20"
-                                    heigh="20">
+                                    height="20">
                                         <use href="./img/symbol-defs.svg#icon-smartphone">
                                         </use>
                                     </svg>
@@ -259,7 +259,7 @@
                         <a href="" class="social-link">
                             <svg class="social-icon"
                             width="20"
-                            heigh="20">
+                            height="20">
                                 <use href="./img/symbol-defs.svg#icon-instagram">
                                 </use>
                             </svg>
@@ -269,7 +269,7 @@
                         <a href="" class="social-link">
                             <svg class="social-icon"
                             width="20"
-                            heigh="20"
+                            height="20"
                             >
                                 <use href="./img/symbol-defs.svg#icon-twitter">
                                 </use>
@@ -280,7 +280,7 @@
                         <a href="" class="social-link">
                             <svg  class="social-icon"
                             width="20"
-                            heigh="20"
+                            height="20"
                             >
                                 <use href="./img/symbol-defs.svg#icon-facebook">
                                 </use>
@@ -291,7 +291,7 @@
                         <a href="" class="social-link">
                             <svg  class="social-icon"
                             width="20"
-                            heigh="20"
+                            height="20"
                             >
                                 <use href="./img/symbol-defs.svg#icon-linkedin">
                                 </use>
