--- a/portfolio.html
+++ b/portfolio.html
@@ -300,6 +300,21 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-subscrib">
+                <form class="mail-field">
+                    <label for="subscrib" class="mail-field-label">Подпишитесь на рассылку</label>
+                    <input type="email" name="subscrib" id="subscrib" placeholder="E-mail">
+                </form>
+                <button type="submit" class="btn-subscrib">
+                    Подписаться
+                    <svg class="send-icon"
+                            width="24"
+                            height="24">
+                                <use href="./img/symbol-defs.svg#icon-send">
+                                </use>
+                            </svg>
+                </button>
+            </div>
         </div>        
      </footer>
 </body>
